--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ streamlit-extras
 flask_cors
 razorpay
 bcrypt
+jwt
 
 # python -m spacy download en_core_web_sm
 # for pymupdf to work properly, you may need to install additional system dependencies:
@@ -31,5 +32,6 @@ bcrypt
 # for pymupdf to work properly, you may need to install additional system dependencies:
 # sudo apt update
 # sudo apt install libpango-1.0-0 libpango1.0-dev
+
 
 
